# RAGChatbot

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  Dockerfile.api  Dockerfile.ui  LICENSE  MEMORY.md  PROJECT_PLAN.md  README.md  SOUL.md  docker-compose.yml  main_cli.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci-cd.yml  ci.yml  vercel.yml
scripts/: benchmark_api.py  evaluate.py  finetune.py  generate_qa.py
src/: __init__.py
src/agent/: __init__.py  graph.py  memory.py  router.py  state.py  tools.py
src/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py
src/core/: __init__.py  config.py  exceptions.py  llm_client.py  logger.py  readiness.py
src/rag/: __init__.py  document.py  embedding.py  retriever.py  vector_store.py
tests/: conftest.py  test_benchmark_api.py  test_generate_qa.py
tests/test_agent/: __init__.py  test_graph_modes.py  test_router.py
tests/test_api/: test_lazy_loading.py
tests/test_core/: __init__.py
tests/test_rag/: __init__.py  test_document.py  test_embedding.py  test_retriever.py
ui/: README.md  app.py  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js
ui/src/: App.tsx  api.ts  main.jsx  styles.css  types.ts  utils.ts
ui/src/components/: AssistantMessage.tsx  AttachmentPreview.tsx  BrandMark.tsx  ChatInput.tsx  ChatLayout.tsx  CodeBlock.tsx  DocumentLibrary.tsx  MessageActions.tsx  MessageItem.tsx  MessageList.tsx  ModeSelector.tsx  ModelSelector.tsx  Notice.tsx  SettingsMenu.tsx  Sidebar.tsx  SidebarConversationItem.tsx  StartupScreen.tsx  SuggestionCard.tsx  ThemeToggle.tsx  TopNavbar.tsx  UserMessage.tsx  WelcomeScreen.tsx
ui/src/context/: ChatContext.tsx
ui/src/data/: sampleData.ts
